--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Hyperion</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <script nomodule>/*@cc_on document.write('\x3Cscript id="_iealwn_js" src="old-ie-warn.js">\x3C/script>'); @*/</script>
   </head>
   <body></body>
 </html>
